Updated camera model.

--- a/ProductPlacementSimulator.csproj
+++ b/ProductPlacementSimulator.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -88,7 +86,6 @@
   <ItemGroup>
     <Compile Include="Assets\MouseDisplayer.cs" />
     <Compile Include="Assets\Scripts\BezierLines.cs" />
-    <Compile Include="Assets\Scripts\UIStuff\TextScrollView.cs" />
     <Compile Include="Assets\Scripts\DataStructs\JSONDataStructs.cs" />
     <Compile Include="Assets\Scripts\DataStructs\Shelf.cs" />
     <Compile Include="Assets\Scripts\Drag3D.cs" />
@@ -99,10 +96,14 @@
     <Compile Include="Assets\Scripts\Generators\Stand.cs" />
     <Compile Include="Assets\Scripts\OldStuff\Drag.cs" />
     <Compile Include="Assets\Scripts\OldStuff\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\UIStuff\TextClickHandle.cs" />
     <Compile Include="Assets\Scripts\Triangulator.cs" />
+    <Compile Include="Assets\Scripts\UIStuff\ButtonClickCallback.cs" />
+    <Compile Include="Assets\Scripts\UIStuff\CallBackRegisterableClass.cs" />
+    <Compile Include="Assets\Scripts\UIStuff\TextClickHandle.cs" />
+    <Compile Include="Assets\Scripts\UIStuff\TextScrollView.cs" />
     <Compile Include="Assets\Scripts\UIStuff\UIController.cs" />
     <Compile Include="Assets\Scripts\Vector.cs" />
+    <Compile Include="Assets\Scripts\maxCamera.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
