Fixed broken UI and added shelf highliting.

--- a/ProductPlacementSimulator.csproj
+++ b/ProductPlacementSimulator.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\Scripts\UIStuff\TextClickHandle.cs" />
     <Compile Include="Assets\Scripts\UIStuff\TextScrollView.cs" />
     <Compile Include="Assets\Scripts\UIStuff\UIController.cs" />
+    <Compile Include="Assets\Scripts\UIStuff\UItoSimulation.cs" />
     <Compile Include="Assets\Scripts\Vector.cs" />
     <Compile Include="Assets\Scripts\maxCamera.cs" />
   </ItemGroup>
@@ -109,6 +110,7 @@
     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
+    <None Include="Assets\StreamingAssets\TEST_THING.txt" />
     <None Include="Assets\StreamingAssets\pallet_stand.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
