--- a/ProductPlacementSimulator.Editor.Plugins.csproj
+++ b/ProductPlacementSimulator.Editor.Plugins.csproj
@@ -131,6 +131,7 @@
     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
+    <None Include="Assets\StreamingAssets\TEST_THING.txt" />
     <None Include="Assets\StreamingAssets\pallet_stand.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
