Added the remove box functionality. With no bugs pending as far as I can tell.

--- a/ProductPlacementSimulator.csproj
+++ b/ProductPlacementSimulator.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -88,7 +90,7 @@
     <Compile Include="Assets\Scripts\BezierLines.cs" />
     <Compile Include="Assets\Scripts\DataStructs\JSONDataStructs.cs" />
     <Compile Include="Assets\Scripts\DataStructs\Shelf.cs" />
-    <Compile Include="Assets\Scripts\Drag3D.cs" />
+    <Compile Include="Assets\Scripts\Generators\Drag3D.cs" />
     <Compile Include="Assets\Scripts\Extensions.cs" />
     <Compile Include="Assets\Scripts\Generators\MeshGenerator.cs" />
     <Compile Include="Assets\Scripts\Generators\SceneGenerator.cs" />
